--- a/LinuxSortedFiles/LinuxSortedFiles.csproj
+++ b/LinuxSortedFiles/LinuxSortedFiles.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <Version>1.0.0</Version>
-    <Authors>YourName</Authors>
+    <Authors>NepuShiro</Authors>
     <TargetFramework>net10.0</TargetFramework>
-    <RepositoryUrl>https://github.com/YourName/LinuxSortedFiles</RepositoryUrl>
-    <PackageId>YourName.LinuxSortedFiles</PackageId>
+    <RepositoryUrl>https://github.com/NepuShiro/LinuxSortedFiles</RepositoryUrl>
+    <PackageId>NepuShiro.LinuxSortedFiles</PackageId>
     <Product>LinuxSortedFiles</Product>
     <RootNamespace>LinuxSortedFiles</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -27,12 +27,11 @@
   <ItemGroup>
     <PackageReference Include="BepInEx.ResonitePluginInfoProps" Version="3.*" />
     <PackageReference Include="ResoniteModding.BepInExResoniteShim" Version="0.9.*" />
-    <PackageReference Include="ResoniteModding.BepisResoniteWrapper" Version="1.*" />
   </ItemGroup>
 
   <!-- NuGet fallback stripped game references -->
   <ItemGroup Condition="!Exists('$(GamePath)')">
-    <PackageReference Include="Resonite.GameLibs" Version="2025.*" PrivateAssets="all" />
+    <PackageReference Include="Resonite.GameLibs" Version="2026.*" PrivateAssets="all" />
   </ItemGroup>
 
   <!-- Local game references -->
