--- a/thunderstore.toml
+++ b/thunderstore.toml
@@ -4,16 +4,16 @@
 schemaVersion = "0.0.1"
 
 [package]
-namespace = "YourName" # TODO: Change this to the team you're uploading the mod to on Thunderstore
+namespace = "NepuShiro" # TODO: Change this to the team you're uploading the mod to on Thunderstore
 name = "LinuxSortedFiles" # Change this to your mod's name, no spaces or special characters, max 128 characters
 # versionNumber = "1.0.0" # Uncomment this if publishing via manual tcli! Change this to your mod's version, must be in semantic versioning format (e.g. 1.0.0, 2.1.3, 0.1.0-alpha.1)
-description = "Example mod description" # TODO: Change this to your mod's description, max 250 characters
-websiteUrl = "https://github.com/YourName/LinuxSortedFiles" # TODO: Change this to your mod's website/repository, or leave blank
+description = "A BepisLoader mod that Sorts the Files Tab on Linux" # TODO: Change this to your mod's description, max 250 characters
+websiteUrl = "https://github.com/NepuShiro/LinuxSortedFiles" # TODO: Change this to your mod's website/repository, or leave blank
 containsNsfwContent = false
 
 # List any dependencies your mod has here, in the format "namespace-modname" = "version-constraint"
 [package.dependencies] 
-ResoniteModding-BepisLoader = "1.5.1"
+ResoniteModding-BepisLoader = "1.6.0"
 ResoniteModding-BepisResoniteWrapper = "1.0.2"
 
 [build]
@@ -46,4 +46,4 @@ repository = "https://thunderstore.io"
 communities = ["resonite"]
 
 [publish.categories]
-resonite = [ "mods" ] # TODO: Change this to your mod's categories, see https://thunderstore.io/api/experimental/community/resonite/category/ for a list of available categories
+resonite = [ "mods", "Dashboard" ] # TODO: Change this to your mod's categories, see https://thunderstore.io/api/experimental/community/resonite/category/ for a list of available categories
